[gd_scene load_steps=11 format=3 uid="uid://dfaqah7l0v4tx"]

[ext_resource type="Script" path="res://Scripts/selecionaveis.gd" id="1_x3e41"]
[ext_resource type="FontFile" uid="uid://c4bv2aqqam07a" path="res://Minecraft.ttf" id="2_s7gke"]
[ext_resource type="AudioStream" uid="uid://l3456uqq6xvy" path="res://Sounds/kill.wav" id="4_mvfh4"]
[ext_resource type="AudioStream" uid="uid://d27wm4s3v4vix" path="res://Sounds/click.wav" id="4_y07l5"]
[ext_resource type="AudioStream" uid="uid://by25ungnibbib" path="res://Sounds/raio.wav" id="5_hgyy2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6ku3h"]
size = Vector2(211, 119)

[sub_resource type="Animation" id="Animation_c0lv6"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Case:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Case:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Case:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_jwh08"]
resource_name = "slide_in"
length = 0.6
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Case:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 246, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.6)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Case:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.6)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Case:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.6)
}

[sub_resource type="Animation" id="Animation_yujf8"]
resource_name = "slide_out"
length = 0.6
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Case:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(246, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.6)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Case:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.6)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Case:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.6)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_x3sb6"]
_data = {
"RESET": SubResource("Animation_c0lv6"),
"slide_in": SubResource("Animation_jwh08"),
"slide_out": SubResource("Animation_yujf8")
}

[node name="Selecionaveis" type="Node2D"]
z_index = 100
script = ExtResource("1_x3e41")

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(10, 10)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(100, 50)
shape = SubResource("RectangleShape2D_6ku3h")

[node name="Case" type="Node2D" parent="."]
texture_filter = 3
metadata/_edit_group_ = true

[node name="ColorRect" type="ColorRect" parent="Case"]
visible = false
offset_left = -230.0
offset_top = 1.0
offset_bottom = 104.0
mouse_filter = 2
color = Color(0, 0, 0, 0.494118)

[node name="Buttons" type="Node2D" parent="Case"]

[node name="GridContainer" type="GridContainer" parent="Case"]
texture_filter = 3
offset_left = -231.0
offset_top = 3.0
offset_bottom = 83.0
columns = 4

[node name="Button_Pato" type="Button" parent="Case/GridContainer"]
texture_filter = 3
layout_mode = 2
theme_override_fonts/font = ExtResource("2_s7gke")
text = "pato"

[node name="Button_Porco" type="Button" parent="Case/GridContainer"]
texture_filter = 3
layout_mode = 2
theme_override_fonts/font = ExtResource("2_s7gke")
text = "porco"

[node name="Button_Human" type="Button" parent="Case/GridContainer"]
texture_filter = 3
layout_mode = 2
theme_override_fonts/font = ExtResource("2_s7gke")
text = "humano"

[node name="Button_Vaca" type="Button" parent="Case/GridContainer"]
texture_filter = 3
layout_mode = 2
theme_override_fonts/font = ExtResource("2_s7gke")
text = "vaca"

[node name="Button_Raio" type="Button" parent="Case/GridContainer"]
texture_filter = 3
layout_mode = 2
theme_override_fonts/font = ExtResource("2_s7gke")
text = "raio"

[node name="Button_Matar" type="Button" parent="Case/GridContainer"]
texture_filter = 3
layout_mode = 2
theme_override_fonts/font = ExtResource("2_s7gke")
text = "matar"

[node name="Button_Ovelha" type="Button" parent="Case/GridContainer"]
texture_filter = 3
layout_mode = 2
theme_override_fonts/font = ExtResource("2_s7gke")
text = "ovelha"

[node name="Button_Fogo" type="Button" parent="Case/GridContainer"]
texture_filter = 3
layout_mode = 2
theme_override_fonts/font = ExtResource("2_s7gke")
text = "fogo"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_x3sb6")
}

[node name="Click" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_y07l5")

[node name="Kill" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_mvfh4")

[node name="Raio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_hgyy2")

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
[connection signal="pressed" from="Case/GridContainer/Button_Pato" to="." method="_on_button_pato_pressed"]
[connection signal="pressed" from="Case/GridContainer/Button_Porco" to="." method="_on_button_porco_pressed"]
[connection signal="pressed" from="Case/GridContainer/Button_Human" to="." method="_on_button_human_pressed"]
[connection signal="pressed" from="Case/GridContainer/Button_Vaca" to="." method="_on_button_vaca_pressed"]
[connection signal="pressed" from="Case/GridContainer/Button_Raio" to="." method="_on_button_raio_pressed"]
[connection signal="pressed" from="Case/GridContainer/Button_Matar" to="." method="_on_button_matar_pressed"]
[connection signal="pressed" from="Case/GridContainer/Button_Ovelha" to="." method="_on_button_ovelha_pressed"]
[connection signal="pressed" from="Case/GridContainer/Button_Fogo" to="." method="_on_button_fogo_pressed"]
